<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Curious Cat</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="questionTitle">Question Title</string>
    <string name="questionBody">Enter your question.</string>
    <string name="attachImgTxt">Attach an image</string>
    <string name="enterName">Enter your username</string>
    <string name="userHint">Username</string>
    <string name="done">Done</string>
    <string name="title_activity_view_question">ViewQuestion</string>
    <string name="title_activity_respond">respond</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_picture">DisplayPicture</string>
    <string name="title_activity_login">title</string>
    <string name="Username">Type a username</string>
    <string name="user_home_title">User Home</string>
    <string name="user_home_description">The User Home section allows you to view your favorited, recently viewed, \&quot;to read&quot; (saved questions), questions you've authored, and answers you're written.</string>
    <string name="title_activity_user_lists">UserListsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_title">Find a Question</string>
    <string name="comment_dialog">Enter your comment</string>
    <string name="answer_dialog">Enter your answer</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="no_location">Location: None</string>

</resources>
