<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:selectAllOnFocus="true" 
    android:minWidth="300dp" 
  	android:minHeight="400dp"
  	android:background="#FFFFFF">

    <EditText
        android:id="@+id/questionTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/questionTitle"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/questionBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        android:gravity="top|left"
        android:hint="@string/questionBody"
        android:inputType="textMultiLine" />

    <RelativeLayout
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" >

        <ImageButton
            android:id="@+id/attachImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:background="@null"
            android:src="@drawable/camera_icon" />

        <TextView
            android:id="@+id/attachImgTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/attachImg"
            android:text="@string/attachImgTxt"
            android:textColor="#000000" />

    </RelativeLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="#FFFFFF">

        <Button
            android:id="@+id/OkButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="okayResponse"
            android:text="@string/ok" />

        <Button
            android:id="@+id/CancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:onClick="cancelResponse"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>