<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/doneBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="163dp"
        android:text="@string/done" />

    <EditText
        android:id="@+id/inputUsername"
        android:hint="@string/userHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/doneBtn"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inputUsername"
        android:layout_centerHorizontal="true"
        android:text="@string/enterName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>