<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:selectAllOnFocus="true" 
    android:minWidth="300dp"
    android:minHeight="400dp"
    android:background="#FFFFFF"
    >

    <EditText
        android:id="@+id/postBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/questionBody"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/UsernameRespondTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Username" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" >

        <ImageButton
            android:id="@+id/attachImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:src="@drawable/camera_icon" />

        <TextView
            android:id="@+id/attachImgTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/attachImg"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/attachImg"
            android:text="@string/attachImgTxt" />

    </RelativeLayout>


</LinearLayout>