<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:minHeight="400dp"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:selectAllOnFocus="true" >

    <EditText
        android:id="@+id/questionTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/questionTitle"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/questionBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/questionBody"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/UsernameRespondTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Username" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="59dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingLeft="11dp"
            android:text="Include GeoLocation?"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="19dp" />

        <CheckBox
            android:id="@+id/enableLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/textView1" />

        <EditText
            android:id="@+id/userLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:hint="Enter Location" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" >

        <ImageButton
            android:id="@+id/attachImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:src="@drawable/camera_icon" />

        <TextView
            android:id="@+id/attachImgTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/attachImg"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/attachImg"
            android:text="@string/attachImgTxt" />
    </RelativeLayout>
    <!--
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/OkButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="okayResponse"
            android:text="@string/ok" />

        <Button
            android:id="@+id/CancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:onClick="cancelResponse"
            android:text="@string/cancel" />
    </LinearLayout>
    -->

</LinearLayout>